--- a/results/recomputed_results/analysis_recomputed_results.ipynb
+++ b/results/recomputed_results/analysis_recomputed_results.ipynb
@@ -342,20 +342,92 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "agg = df_filtered.groupby(['DisplayMethod', 'Budget'])['SumProb'].agg(['mean', sem]).reset_index()\n",
-    "plt.figure(figsize=(6, 3), dpi=300)\n",
-    "for method in agg['DisplayMethod'].unique():\n",
-    "    sub = agg[agg['DisplayMethod'] == method]\n",
-    "    marker = method_markers.get(method, 'o')\n",
-    "    plt.plot(sub['Budget'], sub['mean'], label=method, marker=marker)\n",
-    "    plt.fill_between(sub['Budget'], sub['mean'] - sub['sem'], sub['mean'] + sub['sem'], alpha=0.2)\n",
-    "plt.xlabel(\"Deadline (Seconds)\")\n",
-    "plt.ylabel(\"FOM\")\n",
-    "plt.legend(title=\"Method\")\n",
-    "plt.grid(True)\n",
-    "x_ticks = sorted(agg['Budget'].unique())\n",
-    "plt.tight_layout()\n",
-    "# plt.savefig(\"plots/Average_FOM_vs_Deadline.png\", dpi=300)\n",
+    "# Average FOM by method & deadline\n",
+    "agg_fom = (\n",
+    "    df_filtered\n",
+    "    .groupby(['DisplayMethod', 'Budget'])['SumProb']\n",
+    "    .agg(['mean', sem])\n",
+    "    .reset_index()\n",
+    ")\n",
+    "\n",
+    "# %-deviation from GCP baseline \n",
+    "df_dev = df_filtered.copy()\n",
+    "\n",
+    "# Build the baseline: mean FOM of GCP\n",
+    "baseline = (\n",
+    "    df_filtered[df_filtered['DisplayMethod'] == 'GCP'][['DatasetName', 'Budget', 'SumProb']]\n",
+    "    .rename(columns={'SumProb': 'BaselineFOM'})\n",
+    ")\n",
+    "df_dev = df_dev.merge(baseline, on=['DatasetName', 'Budget'])\n",
+    "df_dev['FOMPctDeviation'] = 100.0 * (df_dev['SumProb'] - df_dev['BaselineFOM']) / df_dev['BaselineFOM']\n",
+    "\n",
+    "agg_pct = (\n",
+    "    df_dev\n",
+    "    .groupby(['DisplayMethod', 'Budget'])['FOMPctDeviation']\n",
+    "    .agg(['mean', sem])\n",
+    "    .reset_index()\n",
+    ")\n",
+    "\n",
+    "# \n",
+    "budgets_sorted = sorted(df_filtered['Budget'].unique())\n",
+    "xticks_main    = budgets_sorted[::3]  \n",
+    "\n",
+    "fig, (ax_left, ax_right) = plt.subplots(\n",
+    "    1, 2, figsize=(7.2, 3.5), dpi=300, sharex=False\n",
+    ")\n",
+    "\n",
+    "# Left: Average FOM \n",
+    "for method in agg_fom['DisplayMethod'].unique():\n",
+    "    sub = agg_fom[agg_fom['DisplayMethod'] == method]\n",
+    "    marker = method_markers.get(method, 'o') if 'method_markers' in globals() else 'o'\n",
+    "    ax_left.plot(\n",
+    "        sub['Budget'], sub['mean'],\n",
+    "        marker=marker, label=method\n",
+    "    )\n",
+    "    ax_left.fill_between(\n",
+    "        sub['Budget'],\n",
+    "        sub['mean'] - sub['sem'],\n",
+    "        sub['mean'] + sub['sem'],\n",
+    "        alpha=0.2\n",
+    "    )\n",
+    "\n",
+    "ax_left.set_xlabel(\"Deadline (Seconds)\")\n",
+    "ax_left.set_xticks(xticks_main)\n",
+    "ax_left.grid(True)\n",
+    "ax_left.set_title(\"Average FOM\")\n",
+    "\n",
+    "# Right: % Deviation \n",
+    "for method in agg_pct['DisplayMethod'].unique():\n",
+    "    sub = agg_pct[agg_pct['DisplayMethod'] == method]\n",
+    "    ax_right.plot(\n",
+    "        sub['Budget'], sub['mean'], label=method\n",
+    "    )\n",
+    "    ax_right.fill_between(\n",
+    "        sub['Budget'],\n",
+    "        sub['mean'] - sub['sem'],\n",
+    "        sub['mean'] + sub['sem'],\n",
+    "        alpha=0.2\n",
+    "    )\n",
+    "\n",
+    "ax_right.axhline(0, color='black', linestyle='--', linewidth=1)\n",
+    "ax_right.set_xlabel(\"Deadline (Seconds)\")\n",
+    "ax_right.set_xticks(xticks_main)\n",
+    "ax_right.set_title(\"FOM % Deviation\")\n",
+    "ax_right.grid(True)\n",
+    "\n",
+    "\n",
+    "# Shared Legend\n",
+    "handles, labels = ax_left.get_legend_handles_labels()\n",
+    "ax_right.legend(\n",
+    "    handles, labels,\n",
+    "    loc='upper left', \n",
+    "    bbox_to_anchor=(0.3, 0.5),\n",
+    "    ncol=1,\n",
+    "    frameon=False\n",
+    ")\n",
+    "\n",
+    "plt.tight_layout(rect=[0, 0.08, 1, 1])  \n",
+    "plt.savefig(\"../figures/Fig9_WCET_FOM_and_Deviation.png\", dpi=300, bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
